--- a/Tweeter/Base.lproj/Main.storyboard
+++ b/Tweeter/Base.lproj/Main.storyboard
@@ -56,31 +56,6 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="77" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ghw-nQ-R7q">
-                                <rect key="frame" x="0.0" y="163" width="320" height="341"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="77" id="pE5-b5-a96" customClass="TweetTableViewCell" customModule="Tweeter" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="77"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pE5-b5-a96" id="6Vc-Ig-2bT">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="76.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tweet" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rjU-Or-r9R">
-                                                    <rect key="frame" x="8" y="8" width="47" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="tweetLabel" destination="rjU-Or-r9R" id="5PP-cv-AAB"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xbW-Az-Rb8">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
                             </imageView>
@@ -119,6 +94,31 @@
                                     <constraint firstItem="uh8-jz-THK" firstAttribute="top" relation="greaterThanOrEqual" secondItem="vPf-QL-QSc" secondAttribute="bottom" constant="8" id="phW-8q-fIS"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="77" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ghw-nQ-R7q">
+                                <rect key="frame" x="0.0" y="163" width="320" height="341"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="myProfileTweetCell" rowHeight="77" id="pE5-b5-a96" customClass="profileTweetTableViewCell" customModule="Tweeter" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="77"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pE5-b5-a96" id="6Vc-Ig-2bT">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="76.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tweet" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rjU-Or-r9R">
+                                                    <rect key="frame" x="8" y="8" width="304" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="tweetLabel" destination="rjU-Or-r9R" id="fj5-eK-VRc"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -395,11 +395,88 @@
                         <viewControllerLayoutGuide type="bottom" id="XZO-UR-O7m"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="yvz-pC-nEo">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="77" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="y8Y-PJ-BDU">
+                                <rect key="frame" x="0.0" y="163" width="320" height="341"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileTweetCell" rowHeight="77" id="VWe-hY-HhR" customClass="profileTweetTableViewCell" customModule="Tweeter" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="77"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VWe-hY-HhR" id="avt-M5-Wji">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="76.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tweet" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Id1-bm-fnP">
+                                                    <rect key="frame" x="8" y="8" width="304" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="tweetLabel" destination="Id1-bm-fnP" id="hVf-rs-zv4"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ScX-gp-BEa">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZkK-uO-iRK">
+                                <rect key="frame" x="40" y="0.0" width="240" height="162"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="@username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="htE-mI-dmf">
+                                        <rect key="frame" x="50" y="116" width="140" height="17"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z1a-gy-qVQ">
+                                        <rect key="frame" x="57" y="96" width="126" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IE0-MD-MQv">
+                                        <rect key="frame" x="80" y="8" width="80" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="IE0-MD-MQv" secondAttribute="height" multiplier="1:1" id="M1N-Ns-1eV"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" relation="lessThanOrEqual" secondItem="htE-mI-dmf" secondAttribute="bottom" constant="29" id="50F-tK-yaB"/>
+                                    <constraint firstItem="Z1a-gy-qVQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="IE0-MD-MQv" secondAttribute="bottom" constant="8" id="Aid-ku-k2J"/>
+                                    <constraint firstItem="Z1a-gy-qVQ" firstAttribute="leading" secondItem="ZkK-uO-iRK" secondAttribute="leading" constant="57" id="DUo-n2-18P"/>
+                                    <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="IE0-MD-MQv" secondAttribute="trailing" constant="80" id="IhC-H5-XNT"/>
+                                    <constraint firstItem="htE-mI-dmf" firstAttribute="top" secondItem="Z1a-gy-qVQ" secondAttribute="bottom" constant="8" id="SgG-Ad-Tgc"/>
+                                    <constraint firstAttribute="trailing" secondItem="Z1a-gy-qVQ" secondAttribute="trailing" constant="57" id="WUr-7W-Icj"/>
+                                    <constraint firstItem="IE0-MD-MQv" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ZkK-uO-iRK" secondAttribute="top" constant="8" id="YJ9-pQ-bGv"/>
+                                    <constraint firstItem="htE-mI-dmf" firstAttribute="leading" secondItem="ZkK-uO-iRK" secondAttribute="leading" constant="50" id="Yrl-EO-Lp0"/>
+                                    <constraint firstItem="IE0-MD-MQv" firstAttribute="leading" relation="lessThanOrEqual" secondItem="ZkK-uO-iRK" secondAttribute="leading" constant="80" id="hNd-YG-IJY"/>
+                                    <constraint firstAttribute="trailing" secondItem="htE-mI-dmf" secondAttribute="trailing" constant="50" id="vGw-Nz-usd"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="y8Y-PJ-BDU" firstAttribute="top" secondItem="ZkK-uO-iRK" secondAttribute="bottom" id="MfP-ks-9DN"/>
+                            <constraint firstItem="y8Y-PJ-BDU" firstAttribute="top" secondItem="ScX-gp-BEa" secondAttribute="bottom" id="PCN-73-iLl"/>
+                        </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" id="jef-0v-2av"/>
+                    <connections>
+                        <outlet property="coverImageView" destination="ScX-gp-BEa" id="y0X-Ml-jLk"/>
+                        <outlet property="nameLabel" destination="Z1a-gy-qVQ" id="3Ib-Mh-Erw"/>
+                        <outlet property="profileImageView" destination="IE0-MD-MQv" id="KwT-Kn-RHU"/>
+                        <outlet property="screennameLabel" destination="htE-mI-dmf" id="K5L-Ax-IyO"/>
+                        <outlet property="tableView" destination="y8Y-PJ-BDU" id="YOy-md-HkU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EOw-uc-26l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
